Add some utility classes + make defaultconfigfactory more extensible.